--- a/src/views/pages/delete.ejs
+++ b/src/views/pages/delete.ejs
@@ -1,13 +1,12 @@
 <form action='/delete/<%= title %>' method='POST' class='editForm'>
     <input type='hidden' name='_csrf' value='<%= csrfToken %>'>
     <div class="form-group mt-2 mb-2 row">
-        <label for='comment' class='col-sm-2 col-form-label'>편집 요약</label>
+        <label for='comment' class='col-sm-2 col-form-label'><%= l('summary') %></label>
         <div class="col-sm-10">
-            <input class="form-control" id='comment' maxlength=255 name='comment' type="text" placeholder="최대 255자">
+            <input class="form-control" id='comment' maxlength=255 name='comment' type="text" placeholder="<%= global.i18n.__('edit_max255') %>">
         </div>
     </div>
     <div class="form-group mt-2 mb-2 row">
-    <span><%= title %>를 삭제하시겠습니까?</span>
     </div>
-    <button type='submit' type='button' class='btn btn-primary mt-3'>삭제</button>
+    <button type='submit' type='button' class='btn btn-primary mt-3'><%= l('delete') %></button>
 </form>
