--- a/src/views/pages/revert.ejs
+++ b/src/views/pages/revert.ejs
@@ -1,16 +1,16 @@
 <form action='/revert/<%= pagename %>' method='POST' class='editForm'>
     <div class="form-group mt-2 mb-2 row">
-        <label for='newName' class='col-sm-2 col-form-label'>편집 요약</label>
+        <label for='newName' class='col-sm-2 col-form-label'><%= l('summary') %></label>
         <div class="col-sm-10">
             <input class="form-control" id='newName' maxlength=230 name='comment' type="text" placeholder="Max 230 characters">
         </div>
     </div>
     <% if (locals.username === undefined) { %>
-    <p><span class='text-danger fw-bold'>경고!</span>    비로그인 상태로 편집하면 IP가 영구히 기록되어 공개됩니다.</p>
+        <p><span class='text-danger fw-bold'><%= l('warning') %>!</span> <%= l('ipshown') %> </p>
     <% } %>
     <input type='hidden' value='<%= rev %>' name='rev'>
     <div class='mt-2 mb-2'>
         <div class='captcha'><%- captcha %></div>
     </div>
-    <button type='submit' type='button' class='btn btn-primary mt-3'>되돌리기</button>
+    <button type='submit' type='button' class='btn btn-primary mt-3'><%= l('revert') %></button>
 </form>
