--- a/src/views/user/signup.ejs
+++ b/src/views/user/signup.ejs
@@ -1,35 +1,35 @@
 <div class='p-3' style='max-width: 500px'>
     <form action='/signup' method='POST'>
         <div class='form-group mb-2'>
-            <label for='idInputbox'>ID</label>
-            <input type='text' name='id' maxlength=255 class='form-control' id='idInputbox'placeholder='Enter ID' required minlength='3' maxlength='255', onkeyup='idCheck()'>
+            <label for='idInputbox'><%= l('id') %></label>
+            <input type='text' name='id' maxlength=255 class='form-control' id='idInputbox'placeholder='<%= l('register_enterid') %>' required minlength='3' maxlength='255', onkeyup='idCheck()'>
             <p>
-                <small id='goodid' class='text-success fw-bold' style='display: none'>적합한 ID입니다.</small>
-                <small id='badid' class='text-danger fw-bold' style='display: none'>ID는 알파벳 대소문자와 숫자, 언더바(_)로만 이루어져야 합니다.</small>
+                <small id='goodid' class='text-success fw-bold' style='display: none'><%= l('register_idok') %></small>
+                <small id='badid' class='text-danger fw-bold' style='display: none'></small>
             </p>
         </div>
         <div class='form-group mb-2'>
-            <label for='passwordInputbox'>비밀번호</label>
-            <input type='password' name='password' class='form-control' id='passwordInputbox' placeholder='Enter Password' required minlength='8' maxlength='255' onkeyup='pwMatchCheck();pwAppropriateCheck()'
+            <label for='passwordInputbox'><%= l('password') %></label>
+            <input type='password' name='password' class='form-control' id='passwordInputbox' placeholder='<%= l('register_enterpw') %>' required minlength='8' maxlength='255' onkeyup='pwMatchCheck();pwAppropriateCheck()'
             pattern='^[A-Za-z\d$@$!%*?&^#_\-+=<>,./|]{8,255}$'>
-            <small class='form-text text-muted'>비밀번호는 8자 이상이어야 합니다.</small>
-            <small id='passwordbadlength' class='text-danger fw-bold' style='display: none'>비밀번호는 8자 이상 255자 이하여야 합니다.</small>
-            <small id='passwordbadchar' class='text-danger fw-bold' style='display: none'>비밀번호에 올바르지 않은 문자가 포함되어 있습니다: <small id='passwordbadcharlist'></small></small>
+            <small class='form-text text-muted'><%= l('register_p8up') %></small>
+            <small id='passwordbadlength' class='text-danger fw-bold' style='display: none'><%= l('register_illegalpwlength') %></small>
+            <small id='passwordbadchar' class='text-danger fw-bold' style='display: none'><%= l('register_illegalpwchar') %><small id='passwordbadcharlist'></small></small>
         </div>
         <div class='form-group mb-2'>
-            <label for='passwordConfirmInputbox'>Confirm Password</label>
-            <input type='password' name='passwordConfirm' class='form-control' id='passwordConfirmInputbox' area-describedby='passwordConfirmDesc' placeholder='Re-enter password' required minlength='9' maxlength='255' onkeyup='pwMatchCheck()'>
+            <label for='passwordConfirmInputbox'><%= l('register_confirmpw') %></label>
+            <input type='password' name='passwordConfirm' class='form-control' id='passwordConfirmInputbox' area-describedby='passwordConfirmDesc' placeholder='<%= l('register_reenterpw') %>' required minlength='8' maxlength='255' onkeyup='pwMatchCheck()'>
             <p>
-                <small id='passwordmatch' class='text-success fw-bold' style='display: none'>비밀번호가 일치합니다.</small>
-                <small id='passwordnotmatch' class='text-danger fw-bold' style='display: none'>비밀번호가 일치하지 않습니다.</small>
+                <small id='passwordmatch' class='text-success fw-bold' style='display: none'><%= l('register_pwMatch') %></small>
+                <small id='passwordnotmatch' class='text-danger fw-bold' style='display: none'><%= l('register_pwNotMatch') %></small>
             </p>
-            <small id='passwordConfirmDesc' class='form-text text-muted'>비밀번호가 제대로 입력되었는지 확인하기 위해 한 번 더 입력해 주세요.</small>
+            <small id='passwordConfirmDesc' class='form-text text-muted'><%= l('register_confirmPwDesc') %></small>
         </div>
         <div class='mt-2 mb-2'>
             <div class='captcha'><%- captcha %></div>
         </div>
-        <p>계정을 만들면 <a href='<%= global.conf.privacyPolicy %>'>개인정보처리방침</a>에 동의하는 것입니다.</p>
-        <button type='submit' class='btn btn-primary'>Sign up</button>
+        <p><%= l('register_privacyBefore') %><a href='<%= global.conf.privacyPolicy %>'><%= l('register_privacyLn') %></a><%= l('register_privacyAfter') %></p>
+        <button type='submit' class='btn btn-primary'><%= l('register') %></button>
     </form>
     <script src='/js/signupPasswordCheck.js'></script>
 </div>
