--- a/src/views/license.ejs
+++ b/src/views/license.ejs
@@ -1,4 +1,4 @@
-<h2>AkariEngine 3.1 beta 1</h2>
+<h2>AkariEngine 3.0</h2>
 <p>Copyright Kyubin Min 2021-2024.</p>
 <p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
 <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.</p>
